# youtube-analytics-project

./: pyproject.toml
helper/: youtube_api_manual.py
homework-1/: main.py
homework-2/: main.py  moscowpython.json
src/: channel.py  video.py
